# cc_rust_haskell

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  compose.yml
cc/: Dockerfile  start_rest_api_json_server.sh
cc/exact-square-root-rest-api-server/: Dockerfile
cc/exact-square-root-rest-api-server/app/: main.cpp
cc/exact-square-root-rest-api-server/src/exact_sqrt/: exact_square_root.cpp  exact_square_root.h
cc/exact_square_root_rest_api_server/: CMakeLists.txt  Dockerfile
cc/exact_square_root_rest_api_server/app/: CMakeLists.txt  main.cpp
cc/exact_square_root_rest_api_server/src/: CMakeLists.txt  exact_square_root.cpp  exact_square_root.h  main.cpp
cc/exact_square_root_rest_api_server/src/exact_sqrt/: CMakeLists.txt  exact_square_root.cpp  exact_square_root.h
cc/exact_square_root_rest_api_server/tests/: CMakeLists.txt  main.cpp
cc/example_rest_api_json_server/: CMakeLists.txt
cc/example_rest_api_json_server/src/: main.cpp
cc/example_socket_protobuf_server_client/src/: client.cpp  server.cpp
cc/grpc_server/: CMakeLists.txt
cc/hello_world/: CMakeLists.txt
cc/old/example_socket_protobuf_server_client/: CMakeLists.txt
haskell/: Dockerfile  Dockerfile_lts2412
haskell/exact-root/src/: ExactRootFFI.hs
haskell/exact-square-root-rest-api-server/: exact-square-root-rest-api-server.cabal  package.yaml
haskell/exact-square-root-rest-api-server/app/: Main.hs
haskell/exact-square-root-rest-api-server/src/: ExactRoot.hs  ExactRootGer.hs
haskell/exact-square-root-rest-api-server/test/: Spec.hs
haskell/example-socket-protobuf-server/: README.md  example-socket-protobuf-server.cabal
haskell/example-socket-protobuf-server/app/: Main.hs
haskell/example-socket-protobuf-server/proto/: hello_world.proto
haskell/example-socket-protobuf-server/src/Proto/Proto/: HelloWorld.hs
haskell/hello-world/: hello-world.cabal  package.yaml
haskell/old/exact-root/: CHANGELOG.md  README.md  exact-root.cabal  package.yaml
haskell/old/exact-root/app/: Main.hs
haskell/old/exact-root/src/: ExactRoot.hs
haskell/old/example-rest-api-json-server/: CHANGELOG.md  README.md  example-rest-api-json-server.cabal  package.yaml
haskell/old/example-rest-api-json-server/app/: Main.hs
haskell/old/example-socket-protobuf-server/: CHANGELOG.md  package.yaml
haskell/old/example-socket-protobuf-server/src/Proto/Proto/: HelloWorld_Fields.hs
rust/: Dockerfile
rust/exact-square-root-rest-api-server/: Cargo.toml  Dockerfile
rust/exact-square-root-rest-api-server/src/: exact_root.rs  main.rs
rust/example_socket_protobuf_server/: Cargo.toml  build.rs
rust/example_socket_protobuf_server/src/: main.rs
rust/old/example_socket_protobuf_server/: build.rs
webclient/: Dockerfile
webclient/web-content/: index.html
webclient/web-content/js/: main.js  restApiCcExactSqrt.js
