[package]
name = "example_socket_protobuf_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
prost = "0.12"
prost-types = "0.12"
bytes = "1"
tokio-util = "0.7"
indexmap = "1.9.3"
anyhow = "1.0.100"

[build-dependencies]
prost-build = "0.12"
